- Add a confirmation when you're quiting the Publish widget - Fix the URL of a contact - Fix some CSS - Fix #1457492 -  Unable to close left menu on small screen - Display the status on the contacts bloc in Hello - Add a class selector on the Group widget to prevent buggy refresh

--- a/themes/material/css/form.css
+++ b/themes/material/css/form.css
@@ -20,6 +20,7 @@ form > div > label {
     overflow: hidden;
     white-space: nowrap;
     max-width: 100%;
+    left: 0; /* We force the left align */
 }
 
 form > div.icon {
